--- a/SampleDrawing/SampleDrawing/en.lproj/MainStoryboard.storyboard
+++ b/SampleDrawing/SampleDrawing/en.lproj/MainStoryboard.storyboard
@@ -8,7 +8,7 @@
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="SDViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5" customClass="LinearInterpView">
+                    <view key="view" contentMode="scaleToFill" id="5" customClass="SmoothedBIView">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -79,11 +79,11 @@
         </scene>
     </scenes>
     <classes>
-        <class className="LinearInterpView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LinearInterpView.h"/>
-        </class>
         <class className="SDViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SDViewController.h"/>
+        </class>
+        <class className="SmoothedBIView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SmoothedBIView.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
